# torchshape

./: .gitignore  LICENSE  README.md  build.sh  lenet.py  setup.cfg  shape_calculator.py  test.py
src/test/: test_shape_calculator.py
src/torchshape/: __init__.py  shape_calculator.py
