[metadata]
name = torchshape
version = 0.0.5
author = Ahmer Caner Yuzuguler
author_email = ahmet.yuzuguler@epfl.ch
description = Calculates the output shape of Pytorch operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuezuegu/torchshape
project_urls =
    Bug Tracker = https://github.com/yuezuegu/torchshape/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src